[package]
name = "darknet"
version = "0.1.0"
authors = ["Oliver Funk <oli.funk@gmail.com >", "Brandon Hamilton <brandon.hamilton@gmail.com>"]
description = "Rust bindings for darknet"
license = "MIT"
readme = "README.md"
keywords = ["darknet", "cnn", "neural network"]

[dependencies]
libc = "0.2"
darknet-sys = { path = "darknet-sys", version = "0.1.0" }
